<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calender_editor_body"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:text="@string/calendar_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />

        <Button
            android:id="@+id/calendar_editor_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_choose" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calendar_clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/calendar_editor_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80ffffff"
        android:text="@string/quiz_loading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <TextView
        android:id="@+id/not_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80ffffff"
        android:text="@string/calendar_notsupport"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000"
        android:visibility="gone" />
    
    <ExpandableListView
        android:id="@+id/member_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#80ffffff" >
    </ExpandableListView>



</LinearLayout>